# Artisan

./: README.md  pyproject.toml
cli/: artisan_cli.py
domains/docs/: example.py  generate_docs.py
main/: find_project_root.py
tests/fixtures/: project_context.py  project_context.xml
